<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/easy"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/buttom_home"
        app:layout_constraintRight_toLeftOf="@id/medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/trueFalse"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/medium"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        app:layout_constraintLeft_toRightOf="@id/easy"
        app:layout_constraintRight_toLeftOf="@id/hard"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/buttom_home"
        app:layout_constraintBottom_toTopOf="@id/trueFalse"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/hard"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        app:layout_constraintLeft_toRightOf="@id/medium"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/trueFalse"
        android:background="@drawable/buttom_home"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/trueFalse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trueFalse"
        app:layout_constraintBottom_toTopOf="@+id/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/multipleOption"
        app:layout_constraintTop_toBottomOf="@+id/medium"
        android:background="@drawable/buttom_home"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/multipleOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiple_option"
        app:layout_constraintBottom_toTopOf="@+id/category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/trueFalse"
        app:layout_constraintTop_toBottomOf="@+id/medium"
        android:background="@drawable/buttom_home"
        android:textColor="@android:color/black"/>

    <Spinner
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/category"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trueFalse"
        app:layout_constraintBottom_toTopOf="@id/start"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:background="@drawable/buttom_home"/>

    <Button
        android:id="@+id/start"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@android:color/black"
        android:background="@drawable/buttom_home" />

</androidx.constraintlayout.widget.ConstraintLayout>